Fixing form labels being too dark in navbars

--- a/assets/stylesheets/bas-style-kit/_navbars.scss
+++ b/assets/stylesheets/bas-style-kit/_navbars.scss
@@ -164,6 +164,10 @@
   .navbar-btn {
     margin-top: 0;
   }
+
+  .control-label {
+    color: $navbar-color;
+  }
 }
 
 // BSK large navbar (i.e a 'thick' version)
